Add coverage tests for `Model`, `Storage` packages (#94)
* Add fix for Ingredient class regex pattern matching

* Add regex pattern validation for tags

* Add regex matching for Name

* Add more comprehensive regex for Ingredient

* Add full coverage test for Ingredient class

* Add full coverage test for Name class

* Add comprehensive regex for Step matching

Previously, the `\\S+` token was too generic and open to abuse.

Now, the new pattern is more resistant to abuse and will require
significantly more strength to crack

* Add fine-tuning for Step regex

* Add full coverage tests for Step model

* Add full coverage tests for RecipeDuration

* Streamline regex

* Add full coverage tests for RecipePortion

* Add full coverage unit tests for `seedu.recipe.model.recipe`

* Add fix for broken shell tests

* Add fix for EOF errors

* Add 97% method coverage for `seedu.recipe.models`

* Add full coverage tests for `storage` package

* Add checkstyle fixes for main package

* Add successful build